# llm

./: .gitignore  Dockerfile  README.md  bench.py  bench_faiss.cc  bench_pg.py  bench_pgvector.py  cr.py  cxl_llama.py  cxl_local.py  gen_emb.py  insert_pg.py  main.py  pg.py  popdata.py  populate_data.py  profile.py  profile_diskann.sh  profile_hnsw.cc  profile_pgvector.py  rag1.py  rag2.py  rag3.py  rag_code.py  rag_hf.py  rag_hf13b.py  rag_kernel.py  rag_lcpp.py  rag_openai.py  read_repo.py  req.txt  requirements.txt
algos/: CMakeLists.txt  create_indexes.sh  plot.py  plot2.py  profile_faiss.cc  profile_hnsw.cc  profile_hnswlib.cc  profile_hnswlib_simple.cc  run_bench.sh  run_parallelism_bench.py  utils.h
algos/lib/: bruteforce.h
chroma_db/: chroma.sqlite3
configs/: default.toml
embeddings/: generate_datasets.py
faiss/: CMakeLists.txt  bench.py  datasets.py  download_sift.sh  exhaustive_search.py  flat.py  profile_faiss.cc  profile_faiss2.cc  utils.h  vecs_io.py
hnsw/: CMakeLists.txt  hnsw.cc
hnswlib/: CMakeLists.txt  profile_hnsw.cc
index_bench/: bench.py
papers_data/: papers.txt
papers_storage/: docstore.json  index_store.json
rag/: rag_hf.py  rag_hf13b.py  rag_openai.py
recall/: bench.py
scripts/: install_arrow.sh  install_cmake.sh  install_diskann.sh  install_faiss.sh  install_faiss_release.sh  install_milvus.sh  install_milvus_docker.sh  install_openblas.sh  install_pgvector.sh  install_qdrant.sh
